Stop words becoming hyphenated on small screens; Small fixes to the slider;

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,13 @@ body {
 	margin-top: 1.429em; }
 
 .container {
-	max-width: 1100px; }	
+	max-width: 1100px; }
+	
+* {
+	-moz-hyphens:none;
+	-ms-hyphens:none;
+	-webkit-hyphens: none;
+	hyphens:none; }	
 
 /*****
 /*  ~headers
